--- a/index.html
+++ b/index.html
@@ -70,13 +70,48 @@
       <p>© 2026 Jean Carlo. Todos os direitos reservados.</p>
       <section>
         <h3>Contato</h3>
-        <address>
+        <p>Tem um projeto em mente? Entre em contato.</p>
+        <form action="">
+          <label for="nome">Nome:</label>
+          <input type="text" id="nome" name="nome" required /><br />
+
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required /><br />
+
+          <label for="tel">Telefone:</label>
+          <input type="tel" id="tel" name="tel" /><br />
+
+          <label for="assunto">Assunto:</label>
+          <select name="assunto" id="assunto">
+            <option value="orcamento">Orçamento</option>
+            <option value="duvida">Dúvida</option>
+            <option value="outro">Outro</option></select
+          ><br />
+
+          <label for="mensagem">Mensagem:</label>
+          <textarea
+            name="mensagem"
+            id="mensagem"
+            cols="30"
+            rows="5"
+            required
+          ></textarea
+          ><br />
+
+          <input type="checkbox" name="inscricao" id="inscricao" />
+          <label for="inscricao"
+            >Desejo me inscrever para receber novidades</label
+          ><br />
+
+          <input type="submit" value="Enviar mensagem" />
+        </form>
+        <!-- <address>
           <p>
             Email:
             <a href="mailto:jean.carlo@example.com">jean.carlo@example.com</a>
           </p>
           <p>Telefone: <a href="tel:5548999999">48 99999-9999</a></p>
-        </address>
+        </address> -->
       </section>
     </footer>
   </body>
