--- a/index.html
+++ b/index.html
@@ -66,6 +66,41 @@
       </article>
     </section>
 
+    <section id="habilidades">
+      <h2>Habilidades</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Habilidade</th>
+            <th>Nível de Proficiência</th>
+            <th>Descrição</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>HTML</td>
+            <td>Iniciante</td>
+            <td>
+              Capaz de construir estruturas de páginas web semânticas e
+              responsivas.
+            </td>
+          </tr>
+          <tr>
+            <td>CSS</td>
+            <td>Intermediário</td>
+            <td>Experiência com flexbox, grid e animações CSS.</td>
+          </tr>
+          <tr>
+            <td>JavaScript</td>
+            <td>Básico</td>
+            <td>
+              Desenvolvimento de scripts do lado do cliente para interações.
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+
     <footer id="contato">
       <p>© 2026 Jean Carlo. Todos os direitos reservados.</p>
       <section>
